--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-#Material HTML5 Template (https://naveenshaji.github.io/material)
+#Material HTML5 Template (https://Svetetow.github.io/material)
 #The MIT License (MIT)
 #
 #Copyright (c) 2015 Naveen Shaji
@@ -28,7 +28,7 @@ email: naveen@pixelblenders.com
 description: > # this means to ignore newlines until "baseurl:"
   Hello, I'm Naveen, a freelance front-end developer
   and UI designer. Check out my projects on GitHub
-baseurl: "/material/" # the subpath of your site, e.g. /blog/
+baseurl: "Svetetow.github.io/material/" # the subpath of your site, e.g. /blog/
 url: "http://naveenshaji.github.io/material" # the base hostname & protocol for your site
 twitter_username: navvenshady
 github_username:  naveenshaji
