--- a/_config.yml
+++ b/_config.yml
@@ -23,15 +23,13 @@
 
 
 # Site settings
-title: material
-email: naveen@pixelblenders.com
+title: Miha Svete
+email: miha@mihasvete.com
 description: > # this means to ignore newlines until "baseurl:"
-  Hello, I'm Naveen, a freelance front-end developer
-  and UI designer. Check out my projects on GitHub
 baseurl: "Svetetow.github.io/material/" # the subpath of your site, e.g. /blog/
-url: "http://naveenshaji.github.io/material" # the base hostname & protocol for your site
-twitter_username: navvenshady
-github_username:  naveenshaji
+url: "http://www.mihasvete.com" # the base hostname & protocol for your site
+twitter_username: mihasvete
+github_username:  Svetetow
 css: "cyan"
 scroll-cursor: "#00BCD4"
 scroll-rail: "#0097A7"
